<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云智遥控</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="splash_image_descripiton">闪屏页图片</string>
    <string name="home_logo_img_desc">主页logo</string>
    <string name="electric_brand_choice_txt">品牌选择</string>
    <string name="electric_remember_or_not_txt">是否记住</string>
    <string name="electric_fan_health_mode_txt">健康模式</string>
    <string name="electric_fan_confirm">确定</string>
    <string name="brand_choice_txt">请选择品牌</string>
    <string name="remember_choice_txt">请选择</string>
    <string name="equipment_management_center">设备管理中心</string>
    <string name="daytime_mode">白天模式</string>
    <string name="night_mode">夜晚模式</string>
    <string name="electric_fan_img_desc">电风扇图片</string>
    <string name="freezer_img_desc">冰箱图片</string>

    <!-- 电风扇设置页面 -->
    <string name="electric_fan_setting_switch">开关</string>
    <string name="electric_fan_setting_air_volume">风量</string>
    <string name="electric_fan_setting_air_direction">风向</string>
    <string name="electric_fan_setting_time">定时</string>
    <string name="electric_fan_setting_confirm">完成设置</string>
    <string name="electric_fan_setting_health_mode">按遥控器确定键，进入健康模式</string>
    <string name="freezer_cold_storage">冷藏</string>
    <string name="freezer_frozen">冷冻</string>
    <string name="freezer_deep_frozen">极冻</string>
    <string name="freezer_setting_complete">完成设置</string>
    <string name="freezer_energy_save">节能</string>
    <string name="box_setting_switch_txt">开关</string>
    <string name="box_setting_volume">音量</string>
    <string name="box_setting_channel">频道</string>
    <string name="box_setting_time">定时</string>
    <string name="air_cleaner_setting_pm_txt">PM2.5</string>
    <string name="air_cleaner_setting_air_speed">风速</string>
    <string name="air_condition_setting_model_txt">模式</string>
    <string name="air_condition_setting_temp">温度</string>

    <!--设备管理中心添加设备-->
    <string name="electric_fan_channel_txt">电风扇</string>
    <string name="freezer_channel_txt">冰箱</string>
    <string name="air_condition_channel_txt">空调</string>
    <string name="air_cleaner_channel_txt">空气净化器</string>
    <string name="box_channel_txt">机顶盒</string>

</resources>