<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/home_ground_img"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/btn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/electric_brand_choice_txt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/txt_large" />

        <com.skyworth.yunintelligentcontrol.view.materialspinner.MaterialSpinner
            android:id="@+id/elec_fan_brand_choice"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:focusable="true"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/brand_choice_txt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:hint="@string/remember_choice_txt"
            android:text="@string/electric_remember_or_not_txt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/txt_large" />

        <com.skyworth.yunintelligentcontrol.view.materialspinner.MaterialSpinner
            android:id="@+id/elec_fan_remember_or_not"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:focusable="true"
            android:layout_gravity="center"
            android:hint="@string/brand_choice_txt"
            android:gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/electric_fan_health_mode_txt"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="@dimen/txt_large" />

        <com.skyworth.yunintelligentcontrol.view.materialspinner.MaterialSpinner
            android:id="@+id/elec_fan_mode_choice"
            android:layout_width="600dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:focusable="true"
            android:layout_gravity="center"
            android:hint="@string/brand_choice_txt" />
    </LinearLayout>

    <Button
        android:id="@+id/elec_fan_btn_confirm"
        android:layout_width="260dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="@drawable/btn_selector"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/electric_fan_confirm"
        android:textSize="@dimen/txt_large" />

</LinearLayout>